--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -74,13 +74,16 @@ a:hover {
   max-width: 100%;
   padding: 0; }
 
-.arrow {
+.moving-arrow {
   -moz-animation: bounce 2s infinite;
   -webkit-animation: bounce 2s infinite;
   animation: bounce 2s infinite;
   height: 2rem;
   margin: 2rem 0rem;
   cursor: pointer; }
+
+.button-arrow {
+  height: 1rem; }
 
 @media screen and (min-width: 576px) {
   .intro {
